LeetCode热门100道含算法思路和Java源码

--- a/LeetCode刷题/06.Z字形变换.md
+++ b/LeetCode刷题/06.Z字形变换.md
@@ -114,7 +114,7 @@ T     S     G
 
 只有当我们向上移动到最上面或者向下移动到最下面时，才会更改方向。
 
-![Z字排列](C:\Users\25849\Pictures\Saved Pictures\Z字排列.png)
+![Z字排列](image/Z字排列.png)
 
 ```java
 public static String convert3(String s, int numRows) {
