--- a/LeetCode刷题/18.四数之和.md
+++ b/LeetCode刷题/18.四数之和.md
@@ -53,7 +53,7 @@
 
 
 
-![image-20200522181019333](C:\Users\25849\AppData\Roaming\Typora\typora-user-images\image-20200522181019333.png)
+![image-20200522181019333](image/image-20200522181019333.png)
 
 
 
