--- a/LeetCode刷题/19. 删除链表的倒数第N个节点.md
+++ b/LeetCode刷题/19. 删除链表的倒数第N个节点.md
@@ -36,7 +36,7 @@
 
 **空间复杂度：O(1)**，我们只用了常量级的额外空间。
 
-![image-20200523224459945](C:\Users\25849\AppData\Roaming\Typora\typora-user-images\image-20200523224459945.png)
+![image-20200523224459945](image/image-20200523224459945.png)
 
 `
 
