--- a/LeetCode刷题/23. 合并K个排序链表.md
+++ b/LeetCode刷题/23. 合并K个排序链表.md
@@ -24,7 +24,7 @@
 
 创建一个数组，把所有链表的结点的val放进去，然后排序，再重组新的链表。
 
-![image-20200525204038844](../../Pictures/Typora图片/image-20200525204038844.png)
+![image-20200525204038844](image/image-20200525204038844.png)
 
 ```java
 /**
@@ -65,7 +65,7 @@ class Solution {
 
 我们可以创建一个优化队列，首先把所有链表的头结点放入，然后每次拿出队列中最小的结点（即队首元素），让该结点出队，加入结果链表，并判断该结点是否还有next结点，若有，则把next结点继续入队，这样直到队列为空，就会得到结果链表。
 
-![image-20200525203957138](../../Pictures/Typora图片/image-20200525203957138.png)
+![image-20200525203957138](image/image-20200525203957138.png)
 
 ```java
 /**
@@ -117,7 +117,7 @@ class Solution {
 
 两个链表的合并可以参照我们之前的 21.合并两个有序链表 的解法。
 
-![image-20200525203455413](../../Pictures/Typora图片/image-20200525203455413.png)
+![image-20200525203455413](image/image-20200525203455413.png)
 
 
 
