--- a/LeetCode刷题/24. 两两交换链表中的节点.md
+++ b/LeetCode刷题/24. 两两交换链表中的节点.md
@@ -58,35 +58,35 @@
 
 **（1）**
 
-![1](C:\Users\25849\Pictures\Typora图片\1.jpg)
+![1](image/1-1591953266803.jpg)
 
 
 
-（2）![2](C:\Users\25849\Pictures\Typora图片\2.jpg)
+（2）![2](image/2.jpg)
 
 
 
-（3）![3](C:\Users\25849\Pictures\Typora图片\3.jpg)
+（3）![3](image/3.jpg)
 
 （4）
 
-![4](C:\Users\25849\Pictures\Typora图片\4.jpg)
+![4](image/4.jpg)
 
 
 
 （5）
 
-![5](C:\Users\25849\Pictures\Typora图片\5.jpg)
+![5](image/5.jpg)
 
 
 
 （6）
 
-![6](C:\Users\25849\Pictures\Typora图片\6.jpg)
+![6](image/6.jpg)
 
 （7）
 
-![7](C:\Users\25849\Pictures\Typora图片\7.jpg)
+![7](image/7.jpg)
 
 
 
