--- a/LeetCode刷题/25. K 个一组翻转链表.md
+++ b/LeetCode刷题/25. K 个一组翻转链表.md
@@ -59,17 +59,17 @@
 
 #### 图解：
 
-（1）![1](C:\Users\25849\Pictures\Typora图片\1-1590576834298.jpg)
+（1）![1](image/1-1590576834298.jpg)
 
-（2）![2](C:\Users\25849\Pictures\Typora图片\2-1590576836665.jpg)
+（2）![2](image/2-1590576836665.jpg)
 
-（3）![3](C:\Users\25849\Pictures\Typora图片\3-1590576840252.jpg)
+（3）![3](image/3-1590576840252.jpg)
 
-（4）![4](C:\Users\25849\Pictures\Typora图片\4-1590576842817.jpg)
+（4）![4](image/4-1590576842817.jpg)
 
-（5）![5](C:\Users\25849\Pictures\Typora图片\5-1590576844662.jpg)
+（5）![5](image/5-1590576844662.jpg)
 
-（6）![6](C:\Users\25849\Pictures\Typora图片\6-1590576846943.jpg)
+（6）![6](image/6-1590576846943.jpg)
 
 
 
