--- a/LeetCode刷题/27. 移除元素.md
+++ b/LeetCode刷题/27. 移除元素.md
@@ -70,7 +70,7 @@ for (int i = 0; i < len; i++) {
 
 题目和上一道题一样，非常简单！！！
 
-![2](C:\Users\25849\Pictures\Typora图片\2-1590657097841.jpg)
+![2](image/2-1590657097841.jpg)
 
 
 
