--- a/LeetCode刷题/29. 两数相除.md
+++ b/LeetCode刷题/29. 两数相除.md
@@ -78,7 +78,7 @@ Integer的范围是 -2147483648~2147483647 ，若出现上述情况，结果为 
 
 （2）还有一些边界的判断，如果我们的被除数为`Integer.MIN_VALUE`，那么我们再计算过程中，可能会出现两个很大的负数相加，最后结果越界，会把两个负数之后变成正数，这样就会进入死循环。于是我们需要加入一些边界判断就ok了。
 
-![1](C:\Users\25849\Pictures\Typora图片\1-1590750670610.jpg)
+![1](image/1-1590750670610.jpg)
 
 ### 代码：
 
