--- a/LeetCode刷题/32. 最长有效括号.md
+++ b/LeetCode刷题/32. 最长有效括号.md
@@ -44,7 +44,7 @@
 
 我们既然要先遍历截取子串，那么' ) '开始的子串一定是不满足条件的，可以直接跳过。
 
-![1](C:\Users\25849\Pictures\Typora图片\1-1591081943274.jpg)
+![1](image/1-1591081943274.jpg)
 
 该方法用时是非常高的，在死亡的边缘徘徊！！！
 
@@ -121,11 +121,11 @@ $$
 
 如果最后一个元素为' ) '是有效子串的一部分，那么他一定有一个对应的' ( ' 在倒数第二个 ')' 所在的有效子字符串的前面，如图所示：
 
-![3](C:\Users\25849\Pictures\Typora图片\3-1591086047139.jpg)
+![3](image/3-1591086047139.jpg)
 
 
 
-![2](../../Pictures/Typora图片/2-1591086156227.jpg)
+![2](image/2-1591086156227.jpg)
 
 **代码：**
 
@@ -174,7 +174,7 @@ public class Solution {
 
 该算法的巧妙之处，正是栈首存放的是标记位，而非记录'('的下标。
 
-![4](../../Pictures/Typora图片/4-1591087904171.jpg)
+![4](image/4-1591087904171.jpg)
 
 代码：
 
