--- a/LeetCode刷题/33. 搜索旋转排序数组.md
+++ b/LeetCode刷题/33. 搜索旋转排序数组.md
@@ -44,7 +44,7 @@
 
 其实很简单，我们只需要判断nums[0] <= nums[mid]，说明前半部分有序，否则后半部分有序。
 
-![5](C:\Users\25849\Pictures\Typora图片\5-1591180866858.jpg)
+![5](image/5-1591180866858.jpg)
 
 ### 代码：
 
