--- a/LeetCode刷题/11.盛最多水的容器.md
+++ b/LeetCode刷题/11.盛最多水的容器.md
@@ -8,7 +8,7 @@
 
  
 
-![img](https://aliyun-lc-upload.oss-cn-hangzhou.aliyuncs.com/aliyun-lc-upload/uploads/2018/07/25/question_11.jpg)
+![img](image/question_11.jpg)
 
 图中垂直线代表输入数组 [1,8,6,2,5,4,8,3,7]。在此情况下，容器能够容纳水（表示为蓝色部分）的最大值为 49。
 
