--- a/LeetCode刷题/17.电话号码的字母组合.md
+++ b/LeetCode刷题/17.电话号码的字母组合.md
@@ -8,7 +8,7 @@
 
 给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
 
-![img](https://assets.leetcode-cn.com/aliyun-lc-upload/original_images/17_telephone_keypad.png)
+![img](image/17_telephone_keypad.png)
 
 **示例:**
 
