--- a/LeetCode刷题/26. 删除排序数组中的重复项.md
+++ b/LeetCode刷题/26. 删除排序数组中的重复项.md
@@ -68,7 +68,7 @@ for (int i = 0; i < len; i++) {
 
 题目非常简单！！！
 
-![1](C:\Users\25849\Pictures\Typora图片\1-1590656292441.jpg)
+![1](image/1-1590656292441.jpg)
 
 ```java
 class Solution {
